correction for revision test